[package]
name = "cursortanium"
version = "0.1.0"
description = "A solid cursor for Rust"
authors = ["clitetailor <ducnhatphung@gmail.com>"]
homepage = "https://github.com/clitetailor/cursortanium"
keywords = ["cursor", "parser"]
categories = ["parsing"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
regex = "1"

[dev-dependencies]
lazy_static = "1.4.0"
ron = "0.5.1"
serde = { version = "1", features = ["derive"] }
