[package]
name = "cursortanium"
version = "0.1.0"
description = "A solid cursor for Rust"
authors = ["clitetailor <ducnhatphung@gmail.com>"]
homepage = "https://github.com/clitetailor/cursortanium"
keywords = ["cursor", "parser"]
categories = ["parsing"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
lazy_static = "1.4.0"
regex = "1"
ron = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
pest = "2.1.3"
pest_grammars = "2.1.0"

[dev-dependencies]
